fix social wrap issue on iphone 7

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ h2 {
 
 .cta {
     order: 5;
-    margin-top: 3rem;
+    margin-top: 2rem;
     padding-right: 15vw;
     z-index: 10;
 }
@@ -136,8 +136,9 @@ h2 {
     background: rgba(255, 255, 255, 0.65);
     color: #000000;
     text-decoration: none;
-    padding: 1rem;
+    padding: .75rem;
     text-align: center;
+    font-weight: 600;
     transition: background .25s ease-in-out;
     -webkit-transition: background .25s ease-in-out;
 }
